tests/NormalTests/paczka1/small_fuzzy/37125650.err
Error in line 10: Aw1CvJr A600 235,54
Error in line 5: Aw1CvJr A600 75,2
